--- a/lesson20/wp-app.yaml
+++ b/lesson20/wp-app.yaml
@@ -4,13 +4,18 @@ metadata:
   name: wordpress
   labels:
     app: wordpress
+  namespace: dev
 spec:
-  ports:
-    - port: 80
   selector:
     app: wordpress
     tier: frontend
-  type: LoadBalancer
+  type: NodePort
+  ports:
+  - name: wordpress
+    protocol: TCP
+    port: 8080
+    targetPort: 80
+    nodePort: 30100
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -18,6 +23,7 @@ metadata:
   name: wp-pv-claim
   labels:
     app: wordpress
+  namespace: dev
 spec:
   accessModes:
     - ReadWriteOnce
@@ -31,7 +37,9 @@ metadata:
   name: wordpress
   labels:
     app: wordpress
+  
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: wordpress
@@ -51,10 +59,7 @@ spec:
         - name: WORDPRESS_DB_HOST
           value: wordpress-mysql
         - name: WORDPRESS_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-pass
-              key: password
+          value: examplepass
         - name: WORDPRESS_DB_USER
           value: wordpress
         ports:
