--- a/lesson21/kustomization.yaml
+++ b/lesson21/kustomization.yaml
@@ -1,9 +1,5 @@
-# secretGenerator:
-# - name: mysql-pass
-#   literals:
-#   - password=examplepass
 resources:
   - namespace.yaml
-  - pv.yaml
+  - volumes.yaml
   - wp-db.yaml
   - wp-app.yaml
