--- a/lesson22/wp-app.yaml
+++ b/lesson22/wp-app.yaml
@@ -44,7 +44,10 @@ spec:
       app: wordpress
       tier: frontend
   strategy:
-    type: Recreate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -54,6 +57,13 @@ spec:
       containers:
       - image: wordpress:6.2.1-apache
         name: wordpress
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+          limits:
+            memory: 100Mi
+            cpu: 100m
         env:
         - name: WORDPRESS_DB_HOST
           value: wordpress-mysql
@@ -82,3 +92,22 @@ spec:
                      values:
                      - minikube-m03
                topologyKey: "kubernetes.io/hostname"
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: wordpress
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: wordpress
+  minReplicas: 1
+  maxReplicas: 3
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 70
