--- a/lesson23/kustomization.yaml
+++ b/lesson23/kustomization.yaml
@@ -1,5 +1,9 @@
 resources:
   - namespace.yaml
   - volumes.yaml
-  - wp-db.yaml
+  - netpol.yaml
   - wp-app.yaml
+  - wp-db.yaml
+  - sec.yaml
+ 
+
