--- a/lesson23/wp-db.yaml
+++ b/lesson23/wp-db.yaml
@@ -1,20 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress-mysql
+  name: mysql
   namespace: dev
-  labels:
-    app: wordpress
 spec:
-  type: ClusterIP
   ports:
-    - name: wordpress-mysql
-      port: 3306
-      protocol: TCP
-      targetPort: 3306
+    - port: 3306
+  clusterIP: None
   selector:
-    app: wordpress
-    tier: mysql
+    app: mysql
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -22,65 +16,60 @@ metadata:
   name: mysql-pv-claim
   namespace: dev
 spec:
+  storageClassName: local-storage
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-storage
   resources:
     requests:
-      storage: 2Gi
+      storage: 10Gi
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: wordpress-mysql
-  labels:
-    app: wordpress
+  name: mysql
   namespace: dev
 spec:
+  serviceName: "mysql"
+  replicas: 1
   selector:
     matchLabels:
-      app: wordpress
-      tier: mysql
-  serviceName: "mysql"
-  replicas: 1 # by default is 1
-  minReadySeconds: 10 # by default is 0
+      app: mysql
   template:
     metadata:
       labels:
-        app: wordpress
-        tier: mysql
+        app: mysql
     spec:
-      terminationGracePeriodSeconds: 10
       containers:
-      - image: mysql:8.0
-        name: mysql
-        env:
-          - name: MYSQL_ROOT_PASSWORD
-            value: '1'
-          - name: MYSQL_DATABASE
-            value: wordpress
-          - name: MYSQL_USER
-            value: wordpress
-          - name: MYSQL_PASSWORD
-            value: examplepass
+      - name: mysql
+        image: mysql:5.7
+        args:
+          - "--ignore-db-dir=lost+found"
+
         ports:
         - containerPort: 3306
-          name: mysql
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: "1"
+        - name: MYSQL_DATABASE
+          value: "exampledb"
+        - name: MYSQL_USER
+          value: "exampleuser"
+        - name: MYSQL_PASSWORD
+          value: "examplepass"
         volumeMounts:
-        - name: pv-db-local
+        - name: ps-db
           mountPath: /var/lib/mysql
-      restartPolicy: Always
       volumes:
-      - name: pv-db-local
+      - name: ps-db
         persistentVolumeClaim:
           claimName: mysql-pv-claim
       affinity:
         podAntiAffinity:
-           requiredDuringSchedulingIgnoredDuringExecution:
-             - labelSelector:
-                 matchExpressions:
-                   - key: "app"
-                     operator: In
-                     values:
-                     - minikube-m02
-               topologyKey: "kubernetes.io/hostname"
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: "app"
+                    operator: In
+                    values:
+                    - minikube-m02
+              topologyKey: "kubernetes.io/hostname"
