--- a/lesson26/Hello-World/jenkins/Jenkinsfile
+++ b/lesson26/Hello-World/jenkins/Jenkinsfile
@@ -3,6 +3,9 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+                sh 'mvn -f /root/workspace/codeby_lesson26/Hellow-Devops/pom.xml clean install'
+            }
+            steps {
                 sh 'mvn -B -DskipTests clean package'
             }
         }
