--- a/lesson26/Hello-World/jenkins/Jenkinsfile
+++ b/lesson26/Hello-World/jenkins/Jenkinsfile
@@ -1,6 +1,8 @@
 pipeline {
     agent { 
         node { label 'maven' } }
+    options {
+        rateLimitBuilds(throttle: [count: 10000, durationName: 'day', durationCount: 1])
     stages {
         stage('Build') {
             //steps {
