--- a/lesson26/Hello-World/jenkins/Jenkinsfile
+++ b/lesson26/Hello-World/jenkins/Jenkinsfile
@@ -1,10 +1,6 @@
 pipeline {
-    agent {
-        docker {
-            image 'maven:3.9.2'
-            args '-v /root/.m2:/root/.m2'
-        }
-    }
+    agent { 
+        node { label 'maven' } }
     environment {
         APP_WORLD = "lesson26/Hellow-Devops"
     }
