--- a/lesson26/Hello-World/jenkins/Jenkinsfile
+++ b/lesson26/Hello-World/jenkins/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent { 
         node { label 'maven' } }
     environment {
-        APP_WORLD = "lesson26/Hellow-Devops"
+        APP_WORLD = "lesson26/Hellow-World"
     }
     stages {
         stage('Build') {
