--- a/lesson26/Hello-World/jenkins/Jenkinsfile
+++ b/lesson26/Hello-World/jenkins/Jenkinsfile
@@ -1,6 +1,10 @@
 pipeline {
-    agent { 
-        node { label 'maven' } }
+    agent {
+        docker {
+            image 'maven:3.9.2'
+            args '-v /root/.m2:/root/.m2'
+        }
+    }
     environment {
         APP_WORLD = "lesson26/Hello-World"
     }
