--- a/lesson26/Hello-World/jenkins/Jenkinsfile
+++ b/lesson26/Hello-World/jenkins/Jenkinsfile
@@ -7,10 +7,10 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                dir(env.APP_WORLD) {
+                //dir(env.APP_WORLD) {
                     //sh 'mvn -f pom.xml clean install'
-                    sh 'mvn -B -DskipTests clean package'
-                }
+                sh 'mvn -B -DskipTests clean package'
+                //}
             }
         }
         stage('Test') {
