--- a/lesson26/Hello-World/jenkins/Jenkinsfile
+++ b/lesson26/Hello-World/jenkins/Jenkinsfile
@@ -1,6 +1,5 @@
 pipeline {
-    agent { 
-        node { label 'maven' } }
+    agent any
     environment {
         APP_WORLD = "lesson26/Hello-World"
     }
