--- a/lesson26/Hello-World/jenkins/Jenkinsfile
+++ b/lesson26/Hello-World/jenkins/Jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
-    agent any
+    agent {
+        docker {
+            image 'maven:3.9.9'
+            args '-v /root/.m2:/root/.m2'
+        }
+    }
     environment {
         APP_WORLD = "lesson26/Hello-World"
     }
