--- a/lesson27/Jenkinsfile
+++ b/lesson27/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
     environment {
         GITHUB_URL = "https://github.com/LeoAlecksey/codeby-devops.git"
         GIT_CRED = "GitHub"
+        SONAR_CRED = "sonar"
         BRANCH = "lesson27"
         APP_DEVOPS = "lesson27/Hello-Devops"
         APP_JENS = "lesson27/Hello-Jenkins"
@@ -48,7 +49,7 @@ pipeline {
                         stage('SonarQube Analysis') {
                             steps {
                                 dir(env.APP_DEVOPS) {
-                                    withSonarQubeEnv(credentialsId: 'sonar', installationName: 'SonarQube') {
+                                    withSonarQubeEnv(credentialsId: env.SONAR_CRED, installationName: 'SonarQube') {
                                         sh "mvn clean verify sonar:sonar -Dsonar.projectKey=maven -Dsonar.projectName='maven'"
                                     }
                                 }
@@ -96,7 +97,7 @@ pipeline {
                         stage('SonarQube Analysis') {
                             steps {
                                 dir(env.APP_JENS) {
-                                    withSonarQubeEnv(credentialsId: 'sonar', installationName: 'SonarQube') {
+                                    withSonarQubeEnv(credentialsId: env.SONAR_CRED, installationName: 'SonarQube') {
                                         sh "mvn clean verify sonar:sonar -Dsonar.projectKey=maven -Dsonar.projectName='maven'"
                                     }
                                 }
@@ -144,7 +145,7 @@ pipeline {
                         stage('SonarQube Analysis') {
                             steps {
                                 dir(env.APP_WORLD) {
-                                    withSonarQubeEnv(credentialsId: 'sonar', installationName: 'SonarQube') {
+                                    withSonarQubeEnv(credentialsId: env.SONAR_CRED, installationName: 'SonarQube') {
                                         sh "mvn clean verify sonar:sonar -Dsonar.projectKey=maven -Dsonar.projectName='maven'"
                                     }
                                 }
