--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,13 @@ name: Maven
 
 on:
   push:
-    branches: [lesson28]
-
+    branches: 
+      - 'lesson28'
+    paths:
+      - 'lesson28/Hello-*/**/*.java'
 jobs:
-  build_and_test:
-  
+  build_world:
+    if: github.repository == 'coedeby-devops/lesson28/Hello-World'
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +19,30 @@ jobs:
         java-version: 17
     - name: Build project World
       run: mvn -B package --file lesson28/Hello-World/pom.xml
-    - name: Build project Jenkins
-      run: mvn -B package --file lesson28/Hello-Jenkins/pom.xml
-    - name: Build project Devops
-      run: mvn -B package --file lesson28/Hello-Devops/pom.xml
+
+  build_Jenkins:
+    if: github.repository == 'coedeby-devops/lesson28/Hello-Jenkins'
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
+    - name: Build project World
+      run: mvn -B package --file lesson28/Hello-Jenkins/pom.xml    
+  
+  build_Devops:
+    if: github.repository == 'coedeby-devops/lesson28/Hello-Jenkins'
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
+    - name: Build project World
+      run: mvn -B package --file lesson28/Hello-Devops/pom.xml       
+
