--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - 'lesson28/Hello-*/**/*.java'
 jobs:
-  build_world:
+  build_World:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
