--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: 
       - 'lesson28'
-    paths:
-      - 'lesson28/Hello-*/**/*.java'
+    # paths:
+    #   - 'lesson28/Hello-*/**/*.java'
 jobs:
   build_World:
     runs-on: ubuntu-latest
@@ -15,6 +15,14 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 17
+
+    - name: Cache package app World
+      uses: actions/cache@v1
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('lesson28/Hello-World/pom.xml')}}
+        restore-keys: ${{ runner.os }}-m2
+
     - name: Build project World
       run: mvn -B package --file lesson28/Hello-World/pom.xml
 
@@ -27,6 +35,14 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 17
+
+    - name: Cache package app Jenkins
+      uses: actions/cache@v1
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('lesson28/Hello-Jenkins/pom.xml')}}
+        restore-keys: ${{ runner.os }}-m2
+
     - name: Build project World
       run: mvn -B package --file lesson28/Hello-Jenkins/pom.xml    
   
@@ -39,6 +55,14 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 17
+
+    - name: Cache package app Devops
+      uses: actions/cache@v1
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('lesson28/Hello-Devops/pom.xml')}}
+        restore-keys: ${{ runner.os }}-m2
+
     - name: Build project World
       run: mvn -B package --file lesson28/Hello-Devops/pom.xml       
 
