--- a/lesson28/Hello-Jenkins/pom.xml
+++ b/lesson28/Hello-Jenkins/pom.xml
@@ -72,4 +72,14 @@
       </plugin>
     </plugins>
   </build>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.6.3</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
 </project>
