--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
 
   publish-job_World:
     runs-on: ubuntu-latest
-    needs: [build_and_test]
+    needs: [build_World]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -83,7 +83,7 @@ jobs:
 
   publish-job_Jenkins:
     runs-on: ubuntu-latest
-    needs: [build_and_test]
+    needs: [build_Jenkins]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -98,7 +98,7 @@ jobs:
 
   publish-job_Devops:
     runs-on: ubuntu-latest
-    needs: [build_and_test]
+    needs: [build_Devops]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
