--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           java-version: 17
       - run: mvn -B package --file lesson28/Hello-World/pom.xml -DskipTests
-      - run: mkdir staging1 && cp target/*.jar staging1
+      - run: mkdir staging1 && cp lesson28/Hello-World/target/*.jar staging1
       - uses: actions/upload-artifact@v4
         with:
           name: World-pack
@@ -90,7 +90,7 @@ jobs:
         with:
           java-version: 17
       - run: mvn -B package --file lesson28/Hello-Jenkins/pom.xml -DskipTests
-      - run: mkdir staging2 && cp target/*.jar staging2
+      - run: mkdir staging2 && cp lesson28/Hello-Jenkins/target/*.jar staging2
       - uses: actions/upload-artifact@v4
         with:
           name: Jenkins-pack
@@ -105,7 +105,7 @@ jobs:
         with:
           java-version: 17
       - run: mvn -B package --file lesson28/Hello-Devops/pom.xml -DskipTests
-      - run: mkdir staging3 && cp target/*.jar staging3
+      - run: mkdir staging3 && cp lesson28/Hello-Devops/target/*.jar staging3
       - uses: actions/upload-artifact@v4
         with:
           name: Devops-pack
