--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,3 +110,16 @@ jobs:
         with:
           name: Devops-pack
           path: staging3
+
+  build-docker-image:
+    name: Publish World to Docker Hub
+    runs-on: ubuntu-latest
+    needs: [build_World]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_NAME }} -p ${{ secrets.DOCKER_PASS }}
+      - name: Build Container image World
+        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+      - name: Publish Docker image World
+        run: docker push ${{ secrets.DOCKER_REPO }}
