--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,7 +111,7 @@ jobs:
           name: Devops-pack
           path: staging3
 
-  build-docker-image:
+  World-docker-image:
     name: Publish World to Docker Hub
     runs-on: ubuntu-latest
     needs: [build_World]
@@ -123,3 +123,29 @@ jobs:
         run: docker build -t ${{ secrets.DOCKER_REPO }}:world lesson28/Hello-World/
       - name: Publish Docker image World
         run: docker push ${{ secrets.DOCKER_REPO }}:world
+
+  Jenkins-docker-image:
+    name: Publish Jenkins to Docker Hub
+    runs-on: ubuntu-latest
+    needs: [build_Jenkins]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_NAME }} -p ${{ secrets.DOCKER_PASS }}
+      - name: Build Container image Jenkins
+        run: docker build -t ${{ secrets.DOCKER_REPO }}:jenkins lesson28/Hello-Jenkins/
+      - name: Publish Docker image Jenkins
+        run: docker push ${{ secrets.DOCKER_REPO }}:jenkins
+
+  Devops-docker-image:
+    name: Publish Devops to Docker Hub
+    runs-on: ubuntu-latest
+    needs: [build_Devops]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_NAME }} -p ${{ secrets.DOCKER_PASS }}
+      - name: Build Container image Devops
+        run: docker build -t ${{ secrets.DOCKER_REPO }}:devops lesson28/Hello-Devops/
+      - name: Publish Docker image Devops
+        run: docker push ${{ secrets.DOCKER_REPO }}:devops
